--- a/book/book-dev.yml
+++ b/book/book-dev.yml
@@ -1,6 +1,6 @@
 spring:
   rabbitmq:
-    host: ${CLOUD_BUS_RABBIT_HOST:127.0.0.1}
+    host: ${CLOUD_BUS_RABBIT_HOST:localhost}
     port: ${CLOUD_BUS_RABBIT_PORT:5672}
     username: ${CLOUD_BUS_RABBIT_USERNAME}
     password: ${CLOUD_BUS_RABBIT_PASSWORD}
