--- a/book/book-dev.yml
+++ b/book/book-dev.yml
@@ -1,9 +1,9 @@
 spring:
   rabbitmq:
-    host: ${CLOUD_BUS_RABBIT_HOST:localhost}
-    port: ${CLOUD_BUS_RABBIT_PORT:5672}
-    username: ${CLOUD_BUS_RABBIT_USERNAME}
-    password: ${CLOUD_BUS_RABBIT_PASSWORD}
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 
 service-discovery:
